--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,51 @@
 :root{
     --primary-text-color:rgba(117, 117, 117, 1);
     --title-text-color:rgba(33, 33, 33, 1);
-    --accent-text-color:rgba(33, 150, 243, 1);
-    
-    
-    
-    
-    
+    --accent-text-color:rgba(33, 150, 243, 1);   
 }
 
+.header-color{
+   background-color: #FFFFFF;
+  display: inline;
+
+
+
+}
 .logo {
-    color:var(--accent-text-color)
+    color: var(--accent-text-color);
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+}
+.logo-color{
+    color: var(--title-text-color);
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+   display: inline;
+margin-top: 24px;
+margin-left: 215px;
 }
  
+ .nav-menu li {
+    display: inline;
+    margin-top:33px;
+   
+ }
+ .nav-menu{
+    
+    margin-left:  471px;
+ }
+ .contacts li{
+display: inline;
+
+
+ }
+.contacts{
+    margin-left: 1078px;
+    margin-top: 32px;
+}
