--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,21 @@
     --accent-text-color:rgba(33, 150, 243, 1);  
     --background-color:#fff 
 }
+body {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height */
+    background-color:var(--background-color)
+}
+
+/* header */
 
 .header-color{
   background-color: var(--background-color);
- 
+
  
 }
 .logo {
@@ -17,8 +28,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
-text-align:
-}
+text-align:}
 .logo-color{
     color: var(--title-text-color);
     font-family: 'Raleway';
@@ -26,6 +36,16 @@ text-align:
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
+    text-decoration: none;
+} 
+.logo-color-footer {
+    color:var(--background-color);
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    text-decoration: none;
 }
 .nav-menu li {
     list-style: none;
@@ -41,11 +61,10 @@ text-align:
     line-height: 16px;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
-    cursor: pointer;
-    
+    text-decoration: none;
     
  }
- .nav-link:focus{
+ .nav-link:focus {
 color: var(--accent-text-color);
  }
  .nav-link:hover {
@@ -53,6 +72,16 @@ color: var(--accent-text-color);
  }
  .link-ative{
      color:var(--accent-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    
+     
+
  }
 .contacts{
     list-style: none;
@@ -82,20 +111,19 @@ color: var(--primary-text-color);
 .contact:focus{
     color: var(--accent-text-color);
 }
-body{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-background-color: #FFFFFF;
-}
+
+/* hero */
+
 .hero{
     background-color:rgba(47, 48, 58, 1) ;
 
 }
 .hero-title{
-
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 900;
+font-size: 44px;
+line-height: 60px;
 color: var(--background-color);
 }
 .hero-button{
@@ -113,9 +141,202 @@ color: var(--title-text-color);
 .hero-button:focus {
     color: var(--title-text-color);
 }
-.benefits{
-   opacity: 0;
+
+/* benefits */
+
+.benefits-title {
+    opacity: 0;
 }
-.benefits-list{
-    
+.benefits-list {
+    list-style: none;
+}
+.benefits-list h3{
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--title-text-color);
+}
+.benefits-list p {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: var(--primary-text-color);
+}
+
+ /* My work */
+
+ .my-work-title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+ }
+ .my-work-foto{
+     list-style:none;
+ }
+
+/* My-Team */
+
+.team-section{
+    background-color: #F5F4FA;
+}
+.team-title{
+    color: var(--title-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+.team-list{
+    list-style: none;
+    background-color:var(--background-color);
+    width: 270px;
+    height: 368px;
+}
+.team-list h3{
+    color: var(--title-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+}
+ .team-list p{
+     color: var(--primary-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+ }
+
+ /* footer */
+
+.my-footer{
+    background-color: #2F303A;
+    width:1600px;
+    height: 252px;
+} 
+.my-location{
+    color: var(--background-color);
+
+}
+ 
+
+
+/* Портфолио */
+.portf-ul{
+    list-style: none;
+}
+
+/* .portf-li  */
+
+.portf-button {
+    color: var(--background-color);
+    height: 38px;
+    width: 73px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    background-color: var(--accent-text-color);
+     font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.portf-button-web{
+    color:var(--title-text-color);
+    width: 128px;
+    height: 38px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+   background-color:  #F5F4FA;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 26px;
+}
+.portf-button-app{
+    color:var(--title-text-color);
+    width: 145px;
+    height: 38px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    background-color:
+    #F5F4FA;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+}
+.portf-button-design{
+    color: var(--title-text-color);
+    width: 103px;
+    height: 38px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    background-color: #F5F4FA;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+}
+.portf-button-market{
+    color: var(--title-text-color);
+    width: 130px;
+    height: 38px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    background-color:#F5F4FA;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+}
+/* Проєкти */
+.progekt-title{
+    opacity: 0;
+}
+.progekt-list{
+    list-style: none;
+}
+.progekt-list p {
+color: var(--primary-text-color);
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+}
+.progekt-list h3{
+color: var(--title-text-color);
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 36px;
 }
