--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,6 @@ body {
 
 .header-color{
   background-color: var(--background-color);
-
- 
 }
 .logo {
     color: var(--accent-text-color);
@@ -28,7 +26,9 @@ font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
-text-align:}
+} 
+
+
 .logo-color{
     color: var(--title-text-color);
     font-family: 'Raleway';
