--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
+    /* identical to box height */
     background-color:var(--background-color)
 }
 
@@ -43,7 +44,7 @@ line-height: 1.19;
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.9;
+    line-height: 1.19;
     text-decoration: none;
 }
 .nav-menu li {
@@ -57,7 +58,7 @@ line-height: 1.19;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.1;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
     text-decoration: none;
@@ -75,7 +76,7 @@ color: var(--accent-text-color);
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.1;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
     
@@ -98,7 +99,7 @@ font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 1.1;
+line-height: 1.14;
 letter-spacing: 0.02em;
 text-decoration: none;
 color: var(--primary-text-color);
@@ -122,7 +123,7 @@ font-family: 'Roboto';
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
-line-height: 1.44;
+line-height: 1.36;
 color: var(--background-color);
 }
 .hero-button{
@@ -154,15 +155,17 @@ font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
 font-size: 14px;
-line-height: 1.1;
+line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--title-text-color);
 }
 .benefits-list p {
 font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
 font-size: 14px;
-line-height: 1.7;
+line-height: 1.5;
 letter-spacing: 0.03em;
 color: var(--primary-text-color);
 }
@@ -174,7 +177,7 @@ color: var(--primary-text-color);
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
@@ -194,7 +197,7 @@ color: var(--primary-text-color);
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
 }
@@ -210,13 +213,15 @@ color: var(--primary-text-color);
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.18;
 }
  .team-list p{
      color: var(--primary-text-color);
     font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.18;
  }
 
  /* footer */
@@ -252,7 +257,7 @@ color: var(--primary-text-color);
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.62;
 }
 
 .portf-button-web{
@@ -267,7 +272,7 @@ font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 1.6;
+line-height: 1.62;
 }
 .portf-button-app{
     color:var(--title-text-color);
@@ -282,7 +287,7 @@ line-height: 1.6;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.62;
 }
 .portf-button-design{
     color: var(--title-text-color);
@@ -296,7 +301,7 @@ line-height: 1.6;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.62;
 }
 .portf-button-market{
     color: var(--title-text-color);
@@ -310,7 +315,7 @@ line-height: 1.6;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.62;
 }
 /* Проєкти */
 .progekt-title{
@@ -322,8 +327,10 @@ line-height: 1.6;
 .progekt-list p {
 color: var(--primary-text-color);
 font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
 font-size: 16px;
-line-height:1.9;
+line-height:1.87;
 }
 .progekt-list h3{
 color: var(--title-text-color);
