--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,10 @@ color: var(--primary-text-color);
 } 
 .my-location{
     color: var(--background-color);
-
+font-family: 'Roboto';
+font-style: normal;
+font-size: 14px;
+line-height: 1.71;
 }
  
 
