--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,11 @@
     --primary-text-color:rgba(117, 117, 117, 1);
     --title-text-color:rgba(33, 33, 33, 1);
     --accent-text-color:rgba(33, 150, 243, 1);  
+--color-contacts-futter:rgba(255, 255, 255, 0.6);
     --background-color:#fff 
 }
 body {
-    font-family: 'Roboto';
+    font-family: 'Roboto',sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -86,7 +87,6 @@ color: var(--accent-text-color);
 .contacts{
     list-style: none;
     
-   
 }
 .contacts:hover{
     color: var(--accent-text-color);
@@ -95,14 +95,17 @@ color: var(--accent-text-color);
     color: var(--accent-text-color);
 }
 .contact{
+
+color: var(--color-contacts-futter);
+
 font-family: 'Roboto';
 font-style: normal;
-font-weight: 500;
+font-weight: 400;
 font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-text-decoration: none;
-color: var(--primary-text-color);
+line-height: 1.17;
+letter-spacing: 0.03em;
+
+/* color: rgba(255, 255, 255, 0.6); */
 
 }
 .contact:hover{
@@ -127,13 +130,15 @@ line-height: 1.36;
 color: var(--background-color);
 }
 .hero-button{
-background-color: var(--accent-text-color);
-height: 30px;
-width: 136px;
-border-radius: 4px;
-border:none;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+text-align: center;
+letter-spacing: 0.06em;
 cursor: pointer;
-color: var(--background-color)
+
 }
 .hero-button:hover{
 color: var(--title-text-color);
@@ -330,10 +335,9 @@ line-height: 1.62;
 .progekt-list p {
 color: var(--primary-text-color);
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
 font-size: 16px;
 line-height:1.87;
+letter-spacing: 0.03em;
 }
 .progekt-list h3{
 color: var(--title-text-color);
@@ -342,4 +346,5 @@ font-style: normal;
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
+letter-spacing: 0.06em;
 }
